--- a/app/scss/pages/personal-area/_personal-area.scss
+++ b/app/scss/pages/personal-area/_personal-area.scss
@@ -917,7 +917,10 @@
 
     &__collect-info {
 
-        padding-left: 30px;
+        
+        @include _992 {
+            padding-left: 30px;    
+        }
 
         // .personal-area__collect-info--block
 
