--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -278,3 +278,42 @@ input[type="search"]::-webkit-search-results-decoration {
         }
     }
 }
+
+.search-list-wrapper._active .search-list {
+    opacity: 1; visibility: visible;
+}
+
+.search-list {
+    position: absolute;
+    left: 0; top: 100%;
+    transform: translate(0,-5px);
+    width: 100%;
+    z-index: 10;
+
+    background: #F0F0F0;
+    border: 1px solid #C9C9C9;
+    border-radius: 0 0 8px 8px;
+
+    padding: 15px 0 10px;
+
+    max-height: 250px;
+    overflow-y: auto;
+
+    & li {
+        padding: 10px 24px;
+        cursor: pointer;
+        display: none;
+
+        transition: background .2s ease-in-out;
+        &:hover, &.focus {
+            background: #e6e6e6;
+        }
+        
+        &:active {
+            background: #d6d6d6;
+        }
+    }
+
+    opacity: 0; visibility: hidden;
+    transition: opacity .2s ease-in-out, visibility .2s ease-in-out;
+}
