--- a/app/scss/pages/main-page/_database.scss
+++ b/app/scss/pages/main-page/_database.scss
@@ -36,18 +36,28 @@
         margin: -7px;
         padding-top: 20px;
         max-width: 1180px;
-        & > * {
-            margin: 7px;
+        &--item {
+            & > * {
+                margin: 7px;
+            }
+            
+            display: flex;
+            flex-direction: column;
+            @media (min-width: 600px) {
+                flex-direction: row;
+            }
+
+            &-body {
+                position: relative;
+                flex: 1 1 auto;
+
+                max-width: 972px;
+            }
         }
 
-        display: flex;
-        flex-direction: column;
-        @media (min-width: 600px) {
-            flex-direction: row;
-        }
+        
 
         &--body {
-            position: relative;
             flex: 1 1 auto;
         }
     }
@@ -57,7 +67,7 @@
     &__label {
         flex: 1 1 auto;
         position: relative;
-        z-index: 11;
+        //z-index: 11;
     }
 
     // .database__input
@@ -124,33 +134,5 @@
             background: var(--dark);
         }
 
-    }
-
-    &__search-list {
-        position: absolute;
-        left: 0; top: 100%;
-        transform: translate(0,-5px);
-        width: 100%;
-        z-index: 10;
-
-        background: #F0F0F0;
-        border: 1px solid #C9C9C9;
-        border-radius: 0 0 8px 8px;
-
-        padding: 15px 0 10px;
-
-        & li {
-            padding: 10px 24px;
-            cursor: pointer;
-
-            transition: background .2s ease-in-out;
-            &:hover {
-                background: #e6e6e6;
-            }
-            
-            &:active {
-                background: #d6d6d6;
-            }
-        }
     }
 }
