--- a/app/scss/pages/person/_articles.scss
+++ b/app/scss/pages/person/_articles.scss
@@ -165,6 +165,7 @@
             flex: 1 1 auto;
 
             display: flex;
+            flex-wrap: wrap;
             margin: -5px;
 
             padding-top: 10px;
@@ -181,6 +182,12 @@
         // .articles__filter--label
 
         &--label {
+            &.custom-date {
+                flex: 1 1 100%;
+                @media (min-width: 600px) {
+                    flex: 0 1 auto;
+                }
+            }
         }
 
         // .articles__filter--date
