--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -286,7 +286,7 @@ input[type="search"]::-webkit-search-results-decoration {
 .search-list {
     position: absolute;
     left: 0; top: 100%;
-    transform: translate(0,-5px);
+    transform: translate(0,-10px);
     width: 100%;
     z-index: 10;
 
@@ -294,13 +294,14 @@ input[type="search"]::-webkit-search-results-decoration {
     border: 1px solid #C9C9C9;
     border-radius: 0 0 8px 8px;
 
-    padding: 15px 0 10px;
+    padding: 0px 0 10px 0;
 
-    max-height: 250px;
-    overflow-y: auto;
+    max-height: 176px;
+    overflow: hidden;
 
     & li {
         padding: 10px 24px;
+        margin-top: 10px;
         cursor: pointer;
         display: none;
 
