--- a/app/scss/pages/main-page/_tag-cloud.scss
+++ b/app/scss/pages/main-page/_tag-cloud.scss
@@ -56,8 +56,8 @@
             padding: 8px;
         }
 
-        opacity: 0;
-        animation: infiniteOpacity 4s ease var(--delay) infinite normal forwards;
+        /* opacity: 0;
+        animation: infiniteOpacity 4s ease var(--delay) infinite normal forwards; */
 
         // .tag-cloud__item--body
 
