--- a/app/scss/pages/main-page/_tag-cloud.scss
+++ b/app/scss/pages/main-page/_tag-cloud.scss
@@ -66,10 +66,12 @@
             background: var(--light);
             border-radius: 5px;
 
-            white-space: nowrap;
+            min-width: 130px;
+
+            /* white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            width: 175px;
+            width: 175px; */
 
             @include _768 {
                 padding: 13px 20px;
