--- a/app/scss/main-sections/_header.scss
+++ b/app/scss/main-sections/_header.scss
@@ -3,7 +3,10 @@
 	left: 0; top: 0;
 	width: 100%;
 
-	padding: 30px 0;
+	padding: 15px 0 15px 0;
+	@media (min-width: 500px) {
+		padding: 30px 0;
+	}
 
 	//padding-right: var(--popup-padding) !important;
 
@@ -41,7 +44,6 @@
 		display: flex;
 		justify-content: space-between;
 		flex-wrap: wrap;
-		align-items: center;
 		&._rev {
 			flex-direction: row-reverse;
 		}
@@ -111,7 +113,10 @@
 
 	&__lang {
 
-		padding-top: 15px;
+		padding-top: 0;
+		@media (min-width: 500px) {
+			padding-top: 15px;
+		}
 
 		flex: 1 1 auto;
 
@@ -227,12 +232,20 @@
 			align-items: center;
 			min-height: 100%;
 
-			padding: 100px 0;
+			padding: calc(var(--height-header) - 50px) 0 100px 0;
+			@include _992 {
+				padding: 100px 0 100px 0;
+			}
 		}
 
 		&--block {
 			flex: 1 1 auto;
 			max-width: 770px;
+		}
+
+		&._active &--block > * {
+			opacity: 0;
+			animation: fadeInRight 1s ease var(--delay) 1 normal forwards;
 		}
 
 		@keyframes fadeInRight {
@@ -519,6 +532,10 @@
 	&__page-address {
 		margin-left: -10px; margin-top: -10px;
 		flex: 0 1 calc(100% - 50px);
+		padding-top: 10px;
+		@media (min-width: 500px) {
+			padding-top: 30px;
+		}
 		& ul {
 			display: flex;
 			flex-wrap: wrap;
@@ -627,6 +644,96 @@
 			@media (min-width: 600px) {
 				margin-top: 0;
 			}
+		}
+	}
+
+	// .header__account
+
+	&__account {
+
+		padding-right: 50px;
+		display: none;
+		@include _992 {
+			display: block;
+		}
+
+		// .header__account--row
+
+		&--row {
+			display: flex;
+			flex-wrap: wrap;
+
+			margin: -10px;
+		}
+
+		// .header__account--item
+
+		&--item {
+			padding: 10px;
+		}
+
+		// .header__account--btn
+
+		&--btn {
+			display: flex;
+			align-items: center;
+		}
+
+		// .header__account--icon
+
+		&--icon {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			width: 55px; height: 55px;
+
+			background: #F0F0F0;
+			border-radius: 5px;
+
+			position: relative;
+			&[data-length]::before {
+				content: attr(data-length);
+				position: absolute;
+				right: 0; top: 0;
+				width: 23px; height: 23px;
+				background: #212121;
+
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				text-align: center;
+
+				font-family: var(--title-font);
+				font-weight: 900;
+				line-height: 100%;
+				color: var(--white);
+
+				border-radius: 50%;
+
+				transform: translate(30%,-30%);
+			}
+		}
+
+		// .header__account--text
+
+		&--text {
+			padding-left: 12px;
+
+			font-family: var(--title-font);
+			font-weight: 900;
+			line-height: 100%;
+			color: #252525;
+		}
+	}
+
+	&__nav &__account {
+		padding-top: 30px;
+		padding-left: 30px;
+
+		display: block;
+		@include _992 {
+			display: none;
 		}
 	}
 }
