--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -287,7 +287,7 @@ section {
 .preloader {
     position: fixed;
     left: 0; top: 0;
-    width: 100vw; height: 100vh;
+    width: 100vw; height: var(--height-screen);
 
     background: var(--dark-3);
 
