--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -158,6 +158,7 @@ body._loaded .wrapper {
 
 .btn {
     display: inline-block;
+    font-family: var(--title-font);
     
     padding: 15.5px 20px;
     min-width: 214px;
@@ -165,10 +166,10 @@ body._loaded .wrapper {
         min-width: 180px;
     }
     
-
     background: #212121;
     border: 2px solid #212121;
     color: var(--white);
+
     &._light {
         color: #212121;
         background: var(--white);
